# video_processing

./: .gitignore  README.md  pyproject.toml
src/: calculate_movement.py  calculate_movement_2.0.py  calculate_threshold.ipynb  extract_frames.py  feature_extraction.py  play_vid.py  sleep_classification.py  threshold_selected.ipynb  video_processing.py
